--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ice-ui",
-  "version": "0.0.1",
+  "name": "ice-vue-ui",
+  "version": "0.0.3",
   "description": "一个简易快捷的UI组件库",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify && karma start --single-run"
