--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "一个简易快捷的UI组件库",
   "main": "dist/index.js",
   "scripts": {
+    "start": "parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify && karma start --single-run"
   },
