--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "^8.1.1",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
     "vue-template-compiler": "^2.6.11",
